<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="application_label">Expenses Log</string>
	<string name="menu_label">Menu</string>
	<string name="clear_action_label">Clear</string>
	<string name="delete_action_label">Delete</string>
	<string name="save_action_label">Save</string>
	<string name="cancel_action_label">Cancel</string>
	<string name="choose_action_label">Choose</string>
	<string name="show_action_label">show</string>
	<string name="add_action_label">add</string>
	<string name="title_label">Title</string>
	<string name="expenses_title">Expenses</string>
	<string name="settings">Settings</string>
	<string name="save_error_message">Unable to save due to invalid input</string>
	<string name="go_back_button_description">Go back</string>
	<string name="required_text_field_error_label">This field cannot be empty</string>
	<string name="new_expense">New expense</string>
	<string name="character_counter_text" translatable="false">%d/%d</string>
	<string name="new_category">New category</string>
	<string name="show_empty_categories_label">Show empty categories</string>
	<string name="navigate_action_label">navigate</string>
	<string name="confirm_action_label">OK</string>
	<string name="show_categories_action_label">Show categories</string>
	<string name="show_available_currencies_action_label">show available currencies</string>
	<string name="date_filter_title">Date</string>
	<string name="filters_title">Filters</string>
	<string name="currency_label">Currency</string>
	<string name="amount_label">Amount</string>
	<string name="category_label">Category</string>
	<string name="invalid_format_error">Invalid format</string>
	<string name="no_expenses_title">No expenses</string>
	<string name="expenses_categories_title">Expenses categories</string>
	<string name="total_amount_title">Total amount</string>
	<string name="show_expenses_action_label">Show expenses</string>
	<string name="delete_dialog_title">Permanently delete?</string>
	<string name="date_filter_this_month">This month</string>
	<string name="date_filter_custom">Custom date</string>
	<string name="date_filter_this_year">This year</string>
	<string name="date_filter_any">Any date</string>
	<string name="settings_updated_message">Settings updated</string>
	<string name="expense_created_message">Expense created</string>
	<string name="category_created_message">Category created</string>
	<string name="delete_expense_text">The expense will be deleted permanently.</string>
	<string name="delete_expense_category_text">Deleting the category will also remove all expenses
		belonging to it.</string>
	<string name="currency_code_item_label">currency code: %s</string>
	<string name="character_count_and_limit_label"
		tools:ignore="PluralsCandidate">Character count: %1$d. Character limit: %2$d</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="policy_your_data_stays_with_you_title">Your
		Data Stays With You</string>
	<string name="privacy_policy_your_data_stays_with_you_body">We
		respect your privacy. This app functions entirely
		offline and does not
		collect or share any data. This policy applies to
...
		solely on your device.</string>
	<string name="policy_contact_information_title">Contact
		Information</string>
	<string name="privacy_policy_changes_title">Changes to This
		Policy</string>
	<string name="policy_effective_date_title">Effective date</string>
	<string name="policies">Policies</string>
	<string name="privacy_policy_contact_information_body">If you
		have any questions or concerns regarding this
		Privacy Policy, you may
		contact us by email.</string>
	<string name="privacy_policy_changes_body">If the app’s functionality changes in a way that
		affects your privacy, this Privacy Policy will be updated accordingly.
		We encourage users to review the policy from time to time.</string>
	<string name="privacy_policy_effective_date_body">The effective date refers to the day this Privacy
		Policy was last updated or went into effect. Any changes made to how
		the app handles your data will be reflected in an updated version of
		this policy. We encourage users to review this policy periodically to
		stay informed about how their information is treated.</string>
	<string name="terms_of_service">Terms of Service</string>
	<string name="dialog_first_launch_agree_title">Agree to Continue</string>
	<string name="agree_to_terms">I Agree</string>
	<string name="dialog_first_launch_terms_message">To use this
		app, you must read and accept our Terms
		of
		Service. Use the button
		below to read them.</string>
	<string name="terms_of_service_about_title">About the App</string>
...
